1、去除播放器默认的重复清晰度切换，默认保持【原画】 2、优化播放器生命周期函数，新增生命周期类，通过bind直接绑定避免编写重复代码 3、播放器源码新增代码注释 4、dialog播放器新增直接全屏播放模式