@@ -3,14 +3,12 @@ package io.coderf.arklab.common.activity;
 import android.content.Context;
 import android.content.Intent;
 import android.content.pm.ActivityInfo;
-import android.content.res.Configuration;
+import android.os.Build;
 import android.os.Bundle;
 import android.text.TextUtils;
 
-import androidx.activity.OnBackPressedCallback;
 import androidx.annotation.NonNull;
-
-import com.shuyu.gsyvideoplayer.GSYVideoManager;
+import androidx.annotation.Nullable;
 
 import dagger.hilt.android.AndroidEntryPoint;
 import io.coderf.arklab.common.R;
@@ -20,14 +18,23 @@ import io.coderf.arklab.common.databinding.TextureViewPlayerActivityBinding;
 import io.coderf.arklab.common.viewmodel.VideoPlayerViewModel;
 import io.coderf.arklab.common.widget.dialog.MessageDialog;
 import java.util.Arrays;
+import java.util.List;
 
 import io.coderf.arklab.common.widget.video.VideoPlayerClarityOption;
 import io.coderf.arklab.common.widget.video.VideoPlayerConfig;
 import io.coderf.arklab.common.widget.video.VideoPlayerController;
+import io.coderf.arklab.common.widget.video.VideoPlayerHostMode;
 import io.coderf.arklab.common.widget.video.VideoPlayerViewHelper;
 
 /**
  * 横屏 Activity 视频播放页，使用定制 {@link io.coderf.arklab.common.widget.video.ArkVideoPlayerView}。
+ * <p>
+ * 自定义配置请通过 {@link #PLAYER_CONFIG} 放入 Intent Bundle，勿在 Activity 实例上设置（存在竞态）。
+ *
+ * @author fz
+ * @version 1.0
+ * @since 1.0
+ * @created 2026/6/26 9:49
  */
 @AndroidEntryPoint
 public class VideoPlayerActivity extends BaseActivity<VideoPlayerViewModel, TextureViewPlayerActivityBinding> {
@@ -35,9 +42,9 @@ public class VideoPlayerActivity extends BaseActivity<VideoPlayerViewModel, Text
     public static final String VIDEO_PATH = "videoPath";
     public static final String VIDEO_TITLE = "videoTitle";
     public static final String CACHE_ENABLE = "cacheEnable";
+    public static final String PLAYER_CONFIG = "playerConfig";
 
     private VideoPlayerController controller;
-    private VideoPlayerConfig playerConfig = VideoPlayerConfig.activityDefaults();
 
     @Override
     protected int getLayoutId() {
@@ -71,7 +78,7 @@ public class VideoPlayerActivity extends BaseActivity<VideoPlayerViewModel, Text
 
     @Override
     public void initView(Bundle savedInstanceState) {
-        getOnBackPressedDispatcher().addCallback(this, onBackPressedCallback);
+        VideoPlayerConfig playerConfig = resolvePlayerConfig(getIntent().getExtras());
         if (playerConfig.isDefaultLandscape()) {
             setRequestedOrientation(ActivityInfo.SCREEN_ORIENTATION_SENSOR_LANDSCAPE);
         }
@@ -79,6 +86,7 @@ public class VideoPlayerActivity extends BaseActivity<VideoPlayerViewModel, Text
 
     @Override
     public void initData(Bundle bundle) {
+        VideoPlayerConfig playerConfig = resolvePlayerConfig(bundle);
         String videoPath = bundle.getString(VIDEO_PATH);
         boolean cacheEnable = bundle.getBoolean(CACHE_ENABLE, playerConfig.isCacheEnable());
         String title = bundle.getString(VIDEO_TITLE);
@@ -96,93 +104,80 @@ public class VideoPlayerActivity extends BaseActivity<VideoPlayerViewModel, Text
             return;
         }
 
+        playerConfig.setHostMode(VideoPlayerHostMode.ACTIVITY);
+        playerConfig.setCacheEnable(cacheEnable);
         binding.videoPlayer.applyConfig(playerConfig);
-        playerConfig.setClarityOptions(Arrays.asList(
-            new VideoPlayerClarityOption("原画", videoPath, "最高画质"),
-            new VideoPlayerClarityOption("流畅", videoPath, "节省流量")
-        ));
+        if (!playerConfig.hasClarityOptions()) {
+            playerConfig.setClarityOptions(List.of(
+                    new VideoPlayerClarityOption("原画", videoPath, "最高画质")
+            ));
+        }
         VideoPlayerViewHelper.setupPlayer(binding.videoPlayer, videoPath, cacheEnable, title, videoPath, playerConfig);
         controller = new VideoPlayerController(this, binding.videoPlayer, playerConfig);
         controller.attach(this::finish);
+        controller.bindLifecycle(this);
+        controller.bindBackPressed(getOnBackPressedDispatcher(), this);
         VideoPlayerViewHelper.startPlay(binding.videoPlayer);
     }
 
-    @Override
-    public void onConfigurationChanged(@NonNull Configuration newConfig) {
-        super.onConfigurationChanged(newConfig);
-        if (controller != null) {
-            controller.onConfigurationChanged(newConfig);
+    @NonNull
+    private static VideoPlayerConfig resolvePlayerConfig(@Nullable Bundle bundle) {
+        if (bundle == null) {
+            return VideoPlayerConfig.activityDefaults();
         }
+        VideoPlayerConfig config = readConfig(bundle);
+        return config != null ? config : VideoPlayerConfig.activityDefaults();
     }
 
-    @Override
-    protected void onPause() {
-        super.onPause();
-        if (controller != null) {
-            controller.onHostPause();
-        } else {
-            binding.videoPlayer.onVideoPause();
+    @Nullable
+    private static VideoPlayerConfig readConfig(@NonNull Bundle bundle) {
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+            return bundle.getSerializable(PLAYER_CONFIG, VideoPlayerConfig.class);
         }
+        Object value = bundle.getSerializable(PLAYER_CONFIG);
+        return value instanceof VideoPlayerConfig ? (VideoPlayerConfig) value : null;
     }
 
-    @Override
-    protected void onResume() {
-        super.onResume();
-        if (controller != null) {
-            controller.onHostResume();
-        } else {
-            binding.videoPlayer.onVideoResume();
-        }
-    }
-
-    @Override
-    protected void onDestroy() {
-        if (controller != null) {
-            controller.release();
-            controller = null;
-        } else {
-            GSYVideoManager.releaseAllVideos();
-        }
-        super.onDestroy();
-    }
-
-    public VideoPlayerActivity setPlayerConfig(VideoPlayerConfig playerConfig) {
-        this.playerConfig = playerConfig;
-        return this;
-    }
-
-    private final OnBackPressedCallback onBackPressedCallback = new OnBackPressedCallback(true) {
-        @Override
-        public void handleOnBackPressed() {
-            if (controller != null && controller.onBackPressed()) {
-                return;
-            }
-            finish();
-        }
-    };
-
-    public static void show(Context context, Bundle bundle) {
-        Intent intent = new Intent(context, VideoPlayerActivity.class);
-        intent.putExtras(bundle);
-        context.startActivity(intent);
-    }
-
-    public static void show(Context context, String title, String url) {
-        Intent intent = new Intent(context, VideoPlayerActivity.class);
-        Bundle bundle = new Bundle();
-        bundle.putString(VIDEO_TITLE, title);
-        bundle.putString(VIDEO_PATH, url);
-        intent.putExtras(bundle);
-        context.startActivity(intent);
-    }
-
-    public static void show(Context context, String title, String url, boolean cacheEnable) {
-        Intent intent = new Intent(context, VideoPlayerActivity.class);
+    @NonNull
+    private static Bundle createBundle(@Nullable String title,
+                                       @NonNull String url,
+                                       boolean cacheEnable,
+                                       @Nullable VideoPlayerConfig config) {
         Bundle bundle = new Bundle();
         bundle.putString(VIDEO_TITLE, title);
         bundle.putString(VIDEO_PATH, url);
         bundle.putBoolean(CACHE_ENABLE, cacheEnable);
+        if (config != null) {
+            config.setHostMode(VideoPlayerHostMode.ACTIVITY);
+            bundle.putSerializable(PLAYER_CONFIG, config);
+        }
+        return bundle;
+    }
+
+    public static void show(@NonNull Context context, @NonNull Bundle bundle) {
+        Intent intent = new Intent(context, VideoPlayerActivity.class);
         intent.putExtras(bundle);
+        context.startActivity(intent);
+    }
+
+    public static void show(@NonNull Context context, @Nullable String title, @NonNull String url) {
+        show(context, title, url, true, null);
+    }
+
+    public static void show(@NonNull Context context,
+                            @Nullable String title,
+                            @NonNull String url,
+                            boolean cacheEnable) {
+        show(context, title, url, cacheEnable, null);
+    }
+
+    public static void show(@NonNull Context context,
+                            @Nullable String title,
+                            @NonNull String url,
+                            boolean cacheEnable,
+                            @Nullable VideoPlayerConfig config) {
+        Intent intent = new Intent(context, VideoPlayerActivity.class);
+        intent.putExtras(createBundle(title, url, cacheEnable, config));
         context.startActivity(intent);
     }
 }
